--- a/.releaserc.json
+++ b/.releaserc.json
@@ -14,6 +14,20 @@
   ],
   "plugins": [
     "@semantic-release/commit-analyzer",
-    "@semantic-release/release-notes-generator"
+    "@semantic-release/release-notes-generator",
+    "@semantic-release/git",
+    [
+      "@semantic-release/npm",
+      {
+        "npmPublish": false
+      }
+    ],
+    [
+      "@semantic-release/exec",
+      {
+        "publishCmd": "npm run postinstall"
+      }
+    ],
+    ["@semantic-release/github"]
   ]
 }
