--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
       "changelog": true,
       "commit": true
     }
+  },
+  "dependencies": {
+    "conventional-github-releaser": "^3.1.3"
   }
 }
