--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "aaa",
-  "version": "1.3.0",
+  "version": "1.2.1",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "github-release": "node github-release.js"
+    "github-release": "node github-release.js",
+    "releaser": "conventional-github-releaser"
   },
   "repository": {
     "type": "git",
