--- a/package.json
+++ b/package.json
@@ -18,11 +18,7 @@
     "url": "https://github.com/playerx/release-test/issues"
   },
   "homepage": "https://github.com/playerx/release-test#readme",
-  "standard-version": {
-    "skip": {
-      "changelog": true
-    }
-  },
+  "standard-version": {},
   "dependencies": {
     "conventional-github-releaser": "^3.1.3"
   }
