fix: bump configuration

--- a/.versionrc
+++ b/.versionrc
@@ -7,6 +7,10 @@
     {
       "filename": "rocketshi.version.json",
       "type": "json"
+    },
+    {
+      "filename": "package.json",
+      "type": "json"
     }
   ]
 }
