--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "aaa",
+  "name": "release-test",
   "version": "1.5.2",
   "description": "",
   "main": "index.js",
@@ -18,7 +18,6 @@
     "url": "https://github.com/playerx/release-test/issues"
   },
   "homepage": "https://github.com/playerx/release-test#readme",
-  "standard-version": {},
   "dependencies": {
     "conventional-github-releaser": "^3.1.3"
   }
